# log_system

./: CMakeLists.txt
include/log_system/: log_system.h  log_system.hpp
source/: log_system.cpp
